--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npx hardhat run scripts/deploy.js --network mumbai",
     "script": "node scripts/run.js"
   },
   "author": "Mohammad Alasli",
@@ -27,5 +28,8 @@
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.2",
     "typechain": "^8.1.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
